add project section

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="./src/css/styles.css">
+      <base target="_blank">
       <title>Charles Eller</title>
 </head>
 <body>
       <div class="icons-mobile">
-            <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
-            <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/charlzzdev"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
       </div>
       <header class="header">
@@ -34,15 +35,54 @@
                   <p>Hi! I'm a 17-year-old self-taught web developer learning next to high school.</p>
             </div>
       </header>
+      <header class="section-divider">
+            <h1>Projects</h1>
+      </header>
       <section class="projects">
-            <div class="item">Project 1</div>
-            <div class="item">Project 2</div>
-            <div class="item">Project 3</div>
+            <figure>
+                  <img src="./src/assets/Weather-App.jpg" class="bg" alt="Project image">
+                  <figcaption>
+                        <h1>Weather App</h1>
+                        <p>Get the current weather and forecast for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>. It uses <a href="https://materializecss.com">Materialize</a> and is built with <a href="https://reactjs.org">React</a>.</p>
+                        <div class="actions">
+                              <a href="https://charlzzdev.github.io/weather-app/">View Project <i class="fas fa-eye"></i></a>
+                              <a href="https://github.com/charlzzdev/weather-app">View Code <i class="fas fa-code"></i></a>
+                        </div>
+                  </figcaption>
+            </figure>
+            <figure>
+                  <img src="./src/assets/Entertainment-Rating-App.jpg" class="bg" alt="Project image">
+                  <figcaption>
+                        <h1>Entertainment Rating App</h1>
+                        <p>Search music using the <a href="https://developer.napster.com/api/v2.2">Napster API</a> and rate it. It's built with <a href="https://reactjs.org">React</a> and the ratings are stored on <a href="https://firebase.google.com">Firebase</a>.</p>
+                        <div class="actions">
+                              <a href="https://charlzzdev.github.io/entertainment-rating-app/">View Project <i class="fas fa-eye"></i></a>
+                              <a href="https://github.com/charlzzdev/entertainment-rating-app">View Code <i class="fas fa-code"></i></a>
+                        </div>
+                  </figcaption>
+            </figure>
+            <figure>
+                  <img src="./src/assets/Webshop-App.jpg" class="bg" alt="Project image">
+                  <figcaption>
+                        <h1>Webshop App</h1>
+                        <p>In this app users can order items and registered users are able to post and manage their items that were ordered. It's made with <a href="https://reactjs.org">React</a> and <a href="https://firebase.google.com">Firebase</a>.</p>
+                        <div class="actions">
+                              <a href="https://charlzzdev-webshop.firebaseapp.com">View Project <i class="fas fa-eye"></i></a>
+                              <a href="https://github.com/charlzzdev/webshop">View Code <i class="fas fa-code"></i></a>
+                        </div>
+                  </figcaption>
+            </figure>
       </section>
+      <header class="section-divider">
+            <h1>About</h1>
+      </header>
       <section class="about">
             <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum natus deleniti sint, quo modi voluptates molestiae alias placeat itaque quibusdam corporis atque repellat minima autem omnis ea earum ullam? Dolorem.</p>
             <img src="" class="about-img">
       </section>
+      <header class="section-divider">
+            <h1>Contact</h1>
+      </header>
       <section class="contact">
             <h1>Contact me:</h1>
             <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
