add about section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                               <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
                         </span>
                   </h1>
-                  <p>Hi! I'm a 17-year-old self-taught web developer learning next to high school.</p>
+                  <p>Hi! I'm a 17-year-old self-taught web developer.</p>
             </div>
       </header>
       <header class="section-divider">
@@ -77,8 +77,10 @@
             <h1>About</h1>
       </header>
       <section class="about">
-            <p class="about-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum natus deleniti sint, quo modi voluptates molestiae alias placeat itaque quibusdam corporis atque repellat minima autem omnis ea earum ullam? Dolorem.</p>
-            <img src="" class="about-img">
+            <p class="about-text">I started learning web development at the age of 16. I love to learn modern technologies and I strive to improve everyday. I have been working on the projects above solo, however, I am excited to work in teams.</p>
+            <div class="about-img">
+                  <img src="https://via.placeholder.com/150">
+            </div>
       </section>
       <header class="section-divider">
             <h1>Contact</h1>
