add contact/footer section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
       <div class="icons-mobile">
             <a href="https://github.com/charlzzdev"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
       </div>
       <header class="header">
@@ -28,7 +28,7 @@
                   <h1>Charles Eller
                         <span class="icons">
                               <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
-                              <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
+                              <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" target="blank"><i class="fab fa-linkedin"></i></a>
                               <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
                         </span>
                   </h1>
@@ -85,14 +85,10 @@
       <header class="section-divider">
             <h1>Contact</h1>
       </header>
-      <section class="contact">
-            <h1>Contact me:</h1>
-            <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
-            <a href="#" target="blank"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
-      </section>
-      <footer>
-            2019 Charles Eller.
+      <footer class="contact">
+            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" target="blank"><i class="fab fa-linkedin"></i> Charles Eller</a>
+            <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i> ellerkaresz@gmail.com</a>
+            <p>2019 Charles Eller</p>
       </footer>
 </body>
 </html>
