--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="icons-mobile">
             <a href="https://github.com/charlzzdev"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/charles-eller-5796b6180/"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
+            <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i></a>
       </div>
       <header class="header">
             <nav class="header-nav">
@@ -29,7 +29,7 @@
                         <span class="icons">
                               <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
                               <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" target="blank"><i class="fab fa-linkedin"></i></a>
-                              <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i></a>
+                              <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i></a>
                         </span>
                   </h1>
                   <p>Hi! I'm a 17-year-old self-taught web developer.</p>
@@ -45,7 +45,7 @@
                         <h1>Weather App</h1>
                         <p>Get the current weather and forecast for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>. It uses <a href="https://materializecss.com">Materialize</a> and is built with <a href="https://reactjs.org">React</a>.</p>
                         <div class="actions">
-                              <a href="https://charlzzdev.github.io/weather-app/">View Project <i class="fas fa-eye"></i></a>
+                              <a href="https://weather.charleseller.dev">View Project <i class="fas fa-eye"></i></a>
                               <a href="https://github.com/charlzzdev/weather-app">View Code <i class="fas fa-code"></i></a>
                         </div>
                   </figcaption>
@@ -56,7 +56,7 @@
                         <h1>Entertainment Rating App</h1>
                         <p>Search music using the <a href="https://developer.napster.com/api/v2.2">Napster API</a> and rate it. It's built with <a href="https://reactjs.org">React</a> and the ratings are stored on <a href="https://firebase.google.com">Firebase</a>.</p>
                         <div class="actions">
-                              <a href="https://charlzzdev.github.io/entertainment-rating-app/">View Project <i class="fas fa-eye"></i></a>
+                              <a href="https://entertainment-rating.charleseller.dev">View Project <i class="fas fa-eye"></i></a>
                               <a href="https://github.com/charlzzdev/entertainment-rating-app">View Code <i class="fas fa-code"></i></a>
                         </div>
                   </figcaption>
@@ -86,8 +86,8 @@
             <h1>Contact</h1>
       </header>
       <footer class="contact">
-            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" target="blank"><i class="fab fa-linkedin"></i> Charles Eller</a>
-            <a href="mailto:ellerkaresz@gmail.com"><i class="far fa-envelope"></i> ellerkaresz@gmail.com</a>
+            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/"><i class="fab fa-linkedin"></i> Charles Eller</a>
+            <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i> contact@charleseller.dev</a>
             <p>2019 Charles Eller</p>
       </footer>
 </body>
