add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <a href="https://www.linkedin.com/in/charles-eller-5796b6180/"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i></a>
       </div>
-      <header class="header">
-            <nav class="header-nav">
+      <header class="home" id="home">
+            <nav class="home-nav">
                   <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Projects</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#home" target="_self">Home</a></li>
+                        <li><a href="#projects" target="_self">Projects</a></li>
+                        <li><a href="#about" target="_self">About</a></li>
+                        <li><a href="#contact" target="_self">Contact</a></li>
                   </ul>
             </nav>
             <div class="intro">
@@ -35,7 +35,7 @@
                   <p>Hi! I'm a 17-year-old self-taught web developer.</p>
             </div>
       </header>
-      <header class="section-divider">
+      <header class="section-divider" id="projects">
             <h1>Projects</h1>
       </header>
       <section class="projects">
@@ -73,7 +73,7 @@
                   </figcaption>
             </figure>
       </section>
-      <header class="section-divider">
+      <header class="section-divider" id="about">
             <h1>About</h1>
       </header>
       <section class="about">
@@ -82,7 +82,7 @@
                   <img src="https://via.placeholder.com/150">
             </div>
       </section>
-      <header class="section-divider">
+      <header class="section-divider" id="contact">
             <h1>Contact</h1>
       </header>
       <footer class="contact">
@@ -90,5 +90,7 @@
             <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i> contact@charleseller.dev</a>
             <p>2019 Charles Eller</p>
       </footer>
+      
+      <script src="./src/js/main.js"></script>
 </body>
 </html>
