--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <meta name="description" content="Portfolio of Web Developer Charles Eller. Available to work: contact@charleseller.dev">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <link rel="stylesheet" href="./src/css/styles.css">
       <base target="_blank">
-      <title>Charles Eller</title>
+      <title>Charles Eller - Web Developer Portfolio</title>
 </head>
 <body>
       <div class="icons-mobile">
