--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="intro">
                   <h1>Charles Eller
                         <span class="icons">
-                              <a href="https://github.com/charlzzdev" target="blank"><i class="fab fa-github"></i></a>
-                              <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" target="blank"><i class="fab fa-linkedin"></i></a>
-                              <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i></a>
+                              <a href="https://github.com/charlzzdev" title="Github"><i class="fab fa-github"></i></a>
+                              <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" title="Linkedin"><i class="fab fa-linkedin"></i></a>
+                              <a href="mailto:contact@charleseller.dev" title="E-mail"><i class="far fa-envelope"></i></a>
                         </span>
                   </h1>
                   <p>Hi! I'm a 17-year-old self-taught web developer.</p>
@@ -40,8 +40,8 @@
             <h1>Projects</h1>
       </header>
       <section class="projects">
-            <figure>
-                  <img src="./src/assets/Weather-App.jpg" class="bg" alt="Project image">
+            <figure tabindex="0">
+                  <img src="./src/assets/Weather-App.jpg" class="bg" alt="Screenshot of Weather app">
                   <figcaption>
                         <h1>Weather App</h1>
                         <p>Get the current weather and forecast for any city using the <a href="https://openweathermap.org/api">OpenWeatherMap API</a>. It uses <a href="https://materializecss.com">Materialize</a> and is built with <a href="https://reactjs.org">React</a>.</p>
@@ -51,8 +51,8 @@
                         </div>
                   </figcaption>
             </figure>
-            <figure>
-                  <img src="./src/assets/Entertainment-Rating-App.jpg" class="bg" alt="Project image">
+            <figure tabindex="0">
+                  <img src="./src/assets/Entertainment-Rating-App.jpg" class="bg" alt="Screenshot of Entertainment Rating app">
                   <figcaption>
                         <h1>Entertainment Rating App</h1>
                         <p>Search music using the <a href="https://developer.napster.com/api/v2.2">Napster API</a> and rate it. It's built with <a href="https://reactjs.org">React</a> and the ratings are stored on <a href="https://firebase.google.com">Firebase</a>.</p>
@@ -62,8 +62,8 @@
                         </div>
                   </figcaption>
             </figure>
-            <figure>
-                  <img src="./src/assets/Webshop-App.jpg" class="bg" alt="Project image">
+            <figure tabindex="0">
+                  <img src="./src/assets/Webshop-App.jpg" class="bg" alt="Screenshot of Webshop app">
                   <figcaption>
                         <h1>Webshop App</h1>
                         <p>In this app users can order items and registered users are able to post and manage their items that were ordered. It's made with <a href="https://reactjs.org">React</a> and <a href="https://firebase.google.com">Firebase</a>.</p>
@@ -80,7 +80,7 @@
       <section class="about">
             <p class="about-text">I started learning web development at the age of 16. I love to learn modern technologies and I strive to improve everyday. I have been working on the projects above solo, however, I am excited to work in teams.</p>
             <div class="about-img">
-                  <img src="https://via.placeholder.com/150">
+                  <img src="https://via.placeholder.com/150" alt="Picture of me">
             </div>
       </section>
       <header class="section-divider" id="contact">
