--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <title>Charles Eller - Web Developer Portfolio</title>
 </head>
 <body>
-      <div class="icons-mobile">
-            <a href="https://github.com/charlzzdev"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:contact@charleseller.dev"><i class="far fa-envelope"></i></a>
+      <div class="icons">
+            <a href="https://github.com/charlzzdev" title="Github profile"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" title="LinkedIn profile"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:contact@charleseller.dev" title="E-mail"><i class="far fa-envelope"></i></a>
       </div>
       <header class="home" id="home">
             <nav class="home-nav">
@@ -26,13 +26,7 @@
                   </ul>
             </nav>
             <div class="intro">
-                  <h1>Charles Eller
-                        <span class="icons">
-                              <a href="https://github.com/charlzzdev" title="Github"><i class="fab fa-github"></i></a>
-                              <a href="https://www.linkedin.com/in/charles-eller-5796b6180/" title="Linkedin"><i class="fab fa-linkedin"></i></a>
-                              <a href="mailto:contact@charleseller.dev" title="E-mail"><i class="far fa-envelope"></i></a>
-                        </span>
-                  </h1>
+                  <h1>Charles Eller</h1>
                   <p>Hi! I'm a 17-year-old self-taught web developer.</p>
             </div>
       </header>
