update project section

--- a/index.html
+++ b/index.html
@@ -38,20 +38,6 @@
   </header>
   <section class="projects">
     <figure tabindex="0">
-      <img src="./src/assets/Weather-App.jpg" class="bg" alt="Screenshot of Weather app">
-      <figcaption>
-        <h1>Weather App</h1>
-        <p>Get the current weather and forecast for any city using the <a
-            href="https://openweathermap.org/api">OpenWeatherMap API</a>. It uses <a
-            href="https://materializecss.com">Materialize</a> and is built with <a href="https://reactjs.org">React</a>.
-        </p>
-        <div class="actions">
-          <a href="https://weather.charleseller.dev">View Project <i class="fas fa-eye"></i></a>
-          <a href="https://github.com/charlzzdev/weather-app">View Code <i class="fas fa-code"></i></a>
-        </div>
-      </figcaption>
-    </figure>
-    <figure tabindex="0">
       <img src="./src/assets/Entertainment-Rating-App.jpg" class="bg" alt="Screenshot of Entertainment Rating app">
       <figcaption>
         <h1>Entertainment Rating App</h1>
@@ -65,15 +51,31 @@
       </figcaption>
     </figure>
     <figure tabindex="0">
+      <img src="./src/assets/Typing-Game.jpg" class="bg" alt="Screenshot of Typing Game">
+      <figcaption>
+        <h1>Typing Game</h1>
+        <p>
+          Practice typing with either words or sentences. Set the mode to 'timed' for a challenge of gaining the most
+          points in either 1 or 5 minutes. It's built with <a href="https://www.gatsbyjs.org/">Gatsby</a>.
+        </p>
+        <div class="actions">
+          <a href="https://type.charleseller.dev">View Project <i class="fas fa-eye"></i></a>
+          <a href="https://github.com/charlzzdev/typing-game">View Code <i class="fas fa-code"></i></a>
+        </div>
+      </figcaption>
+    </figure>
+    <figure tabindex="0">
       <img src="./src/assets/Webshop-App.jpg" class="bg" alt="Screenshot of Webshop app">
       <figcaption>
         <h1>Webshop App</h1>
-        <p>In this app users can order items and registered users are able to post and manage their items that were
-          ordered. It's made with <a href="https://reactjs.org">React</a> and <a
-            href="https://firebase.google.com">Firebase</a>.</p>
+        <p>
+          Users can add items to their basket and checkout using the <a href="https://developer.paypal.com/">PayPal
+            API</a>. It's made with <a href="https://reactjs.org">React</a> and <a
+            href="https://firebase.google.com">Firebase</a>.
+        </p>
         <div class="actions">
-          <a href="https://charlzzdev-webshop.firebaseapp.com">View Project <i class="fas fa-eye"></i></a>
-          <a href="https://github.com/charlzzdev/webshop">View Code <i class="fas fa-code"></i></a>
+          <a href="https://webshop.charleseller.dev">View Project <i class="fas fa-eye"></i></a>
+          <a href="https://github.com/charlzzdev/webshop-v2">View Code <i class="fas fa-code"></i></a>
         </div>
       </figcaption>
     </figure>
